# excalidraw-x

./: .gitignore  DEVELOPMENT.md  LICENSE  README.md  electronUiStrings.js  eslint.config.cjs  forge.config.js  index.html  jest.config.cjs  jest.setup.js  main.js  package-lock.json  package.json  preload.js  webpack.config.js
.github/scripts/: ci-canonicalize-msi.js  ci-canonicalize-zip.js  ci-locate-forge-msi.js  ci-locate-forge-zip.js
.github/workflows/: ci.yml
assets/: icon.icns
locales/: desktop-ui.json
scripts/: run-tauri.cjs  windowsBuildEnv.cjs  windowsBuildEnv.test.cjs
src/: App.integration.test.js  App.jsx  desktopApi.js  desktopApi.test.js  desktopMultiInstance.test.js  desktopUiStrings.js  desktopUiStrings.test.js  index.jsx  sceneDirty.js  sceneDirty.test.js
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  menu.rs  paths.rs  state.rs
src/components/: ConfirmModal.jsx
