[package]
name = "app"
version = "0.2.2"
description = "Excalidraw desktop client"
authors = ["Yang Gao <yang.xz.gao@outlook.com>"]
license = "MIT"
repository = "https://github.com/y8gao/excalidraw-x"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.1", features = [] }
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
dirs = "6"
rfd = { version = "0.15", features = ["common-controls-v6"] }
